internal/sources/wikisp/wsparser/name.peg.go
package wsparser

// Code generated by /tmp/go-build1053459652/b001/exe/peg name.peg DO NOT EDIT.

import (
	"fmt"
	"io"
	"os"
	"sort"
	"strconv"
	"strings"
)

const endSymbol rune = 1114112

/* The rule types inferred from the grammar are below. */
type pegRule uint8

const (
	ruleUnknown pegRule = iota
	ruleString
	ruleMarker
	ruleNamePart
	ruleItalicInfraspeciesWithAuthors
	ruleItalicInfraspecies
	ruleInfraRank
	ruleItalicName
	ruleBoldItalicName
	ruleSimpleItalicName
	ruleItalicContent
	ruleBareName
	ruleBareNameContent
	ruleUninomial
	ruleSpecies
	ruleSubspecies
	ruleNameUpperChar
	ruleUpperCharExtended
	ruleUpperChar
	ruleNameLowerChar
	ruleMiscodedChar
	ruleLowerCharExtended
	ruleLowerChar
	ruleUpperASCII
	ruleLowerASCII
	ruleParenthesizedAuthorPart
	ruleAuthorPart
	ruleAuthors
	ruleAuthor
	ruleItalicAuthorText
	ruleAuthorSep
	ruleAuthorTemplate
	ruleTemplateType
	ruleBracketAuthor
	ruleYear
	ruleParenthesizedYear
	ruleReference
	ruleTail
	rule_
	ruleEND
)

var rul3s = [...]string{
	"Unknown",
	"String",
	"Marker",
	"NamePart",
	"ItalicInfraspeciesWithAuthors",
	"ItalicInfraspecies",
	"InfraRank",
	"ItalicName",
	"BoldItalicName",
	"SimpleItalicName",
	"ItalicContent",
	"BareName",
	"BareNameContent",
	"Uninomial",
	"Species",
	"Subspecies",
	"NameUpperChar",
	"UpperCharExtended",
	"UpperChar",
	"NameLowerChar",
	"MiscodedChar",
	"LowerCharExtended",
	"LowerChar",
	"UpperASCII",
	"LowerASCII",
	"ParenthesizedAuthorPart",
	"AuthorPart",
	"Authors",
	"Author",
	"ItalicAuthorText",
	"AuthorSep",
	"AuthorTemplate",
	"TemplateType",
	"BracketAuthor",
	"Year",
	"ParenthesizedYear",
	"Reference",
	"Tail",
	"_",
	"END",
}

type token32 struct {
	pegRule
	begin, end uint32
}

func (t *token32) String() string {
	return fmt.Sprintf("\x1B[34m%v\x1B[m %v %v", rul3s[t.pegRule], t.begin, t.end)
}

type node32 struct {
	token32
	up, next *node32
}

func (node *node32) print(w io.Writer, pretty bool, buffer string) {
	var print func(node *node32, depth int)
	print = func(node *node32, depth int) {
		for node != nil {
			for c := 0; c < depth; c++ {
				fmt.Fprintf(w, " ")
			}
			rule := rul3s[node.pegRule]
			quote := strconv.Quote(string(([]rune(buffer)[node.begin:node.end])))
			if !pretty {
				fmt.Fprintf(w, "%v %v\n", rule, quote)
			} else {
				fmt.Fprintf(w, "\x1B[36m%v\x1B[m %v\n", rule, quote)
			}
			if node.up != nil {
				print(node.up, depth+1)
			}
			node = node.next
		}
	}
	print(node, 0)
}

func (node *node32) Print(w io.Writer, buffer string) {
	node.print(w, false, buffer)
}

func (node *node32) PrettyPrint(w io.Writer, buffer string) {
	node.print(w, true, buffer)
}

type tokens32 struct {
	tree []token32
}

func (t *tokens32) Trim(length uint32) {
	t.tree = t.tree[:length]
}

func (t *tokens32) Print() {
	for _, token := range t.tree {
		fmt.Println(token.String())
	}
}

func (t *tokens32) AST() *node32 {
	type element struct {
		node *node32
		down *element
	}
	tokens := t.Tokens()
	var stack *element
	for _, token := range tokens {
		if token.begin == token.end {
			continue
		}
		node := &node32{token32: token}
		for stack != nil && stack.node.begin >= token.begin && stack.node.end <= token.end {
			stack.node.next = node.up
			node.up = stack.node
			stack = stack.down
		}
		stack = &element{node: node, down: stack}
	}
	if stack != nil {
		return stack.node
	}
	return nil
}

func (t *tokens32) PrintSyntaxTree(buffer string) {
	t.AST().Print(os.Stdout, buffer)
}

func (t *tokens32) WriteSyntaxTree(w io.Writer, buffer string) {
	t.AST().Print(w, buffer)
}

func (t *tokens32) PrettyPrintSyntaxTree(buffer string) {
	t.AST().PrettyPrint(os.Stdout, buffer)
}

func (t *tokens32) Add(rule pegRule, begin, end, index uint32) {
	tree, i := t.tree, int(index)
	if i >= len(tree) {
		t.tree = append(tree, token32{pegRule: rule, begin: begin, end: end})
		return
	}
	tree[i] = token32{pegRule: rule, begin: begin, end: end}
}

func (t *tokens32) Tokens() []token32 {
	return t.tree
}

type Parser struct {
	Buffer string
	buffer []rune
	rules  [40]func() bool
	parse  func(rule ...int) error
	reset  func()
	Pretty bool
	tokens32
}

func (p *Parser) Parse(rule ...int) error {
	return p.parse(rule...)
}

func (p *Parser) Reset() {
	p.reset()
}

type textPosition struct {
	line, symbol int
}

type textPositionMap map[int]textPosition

func translatePositions(buffer []rune, positions []int) textPositionMap {
	length, translations, j, line, symbol := len(positions), make(textPositionMap, len(positions)), 0, 1, 0
	sort.Ints(positions)

search:
	for i, c := range buffer {
		if c == '\n' {
			line, symbol = line+1, 0
		} else {
			symbol++
		}
		if i == positions[j] {
			translations[positions[j]] = textPosition{line, symbol}
			for j++; j < length; j++ {
				if i != positions[j] {
					continue search
				}
			}
			break search
		}
	}

	return translations
}

type parseError struct {
	p   *Parser
	max token32
}

func (e *parseError) Error() string {
	tokens, err := []token32{e.max}, "\n"
	positions, p := make([]int, 2*len(tokens)), 0
	for _, token := range tokens {
		positions[p], p = int(token.begin), p+1
		positions[p], p = int(token.end), p+1
	}
	translations := translatePositions(e.p.buffer, positions)
	format := "parse error near %v (line %v symbol %v - line %v symbol %v):\n%v\n"
	if e.p.Pretty {
		format = "parse error near \x1B[34m%v\x1B[m (line %v symbol %v - line %v symbol %v):\n%v\n"
	}
	for _, token := range tokens {
		begin, end := int(token.begin), int(token.end)
		err += fmt.Sprintf(format,
			rul3s[token.pegRule],
			translations[begin].line, translations[begin].symbol,
			translations[end].line, translations[end].symbol,
			strconv.Quote(string(e.p.buffer[begin:end])))
	}

	return err
}

func (p *Parser) PrintSyntaxTree() {
	if p.Pretty {
		p.tokens32.PrettyPrintSyntaxTree(p.Buffer)
	} else {
		p.tokens32.PrintSyntaxTree(p.Buffer)
	}
}

func (p *Parser) WriteSyntaxTree(w io.Writer) {
	p.tokens32.WriteSyntaxTree(w, p.Buffer)
}

func (p *Parser) SprintSyntaxTree() string {
	var bldr strings.Builder
	p.WriteSyntaxTree(&bldr)
	return bldr.String()
}

func Pretty(pretty bool) func(*Parser) error {
	return func(p *Parser) error {
		p.Pretty = pretty
		return nil
	}
}

func Size(size int) func(*Parser) error {
	return func(p *Parser) error {
		p.tokens32 = tokens32{tree: make([]token32, 0, size)}
		return nil
	}
}
func (p *Parser) Init(options ...func(*Parser) error) error {
	var (
		max                  token32
		position, tokenIndex uint32
		buffer               []rune
	)
	for _, option := range options {
		err := option(p)
		if err != nil {
			return err
		}
	}
	p.reset = func() {
		max = token32{}
		position, tokenIndex = 0, 0

		p.buffer = []rune(p.Buffer)
		if len(p.buffer) == 0 || p.buffer[len(p.buffer)-1] != endSymbol {
			p.buffer = append(p.buffer, endSymbol)
		}
		buffer = p.buffer
	}
	p.reset()

	_rules := p.rules
	tree := p.tokens32
	p.parse = func(rule ...int) error {
		r := 1
		if len(rule) > 0 {
			r = rule[0]
		}
		matches := p.rules[r]()
		p.tokens32 = tree
		if matches {
			p.Trim(tokenIndex)
			return nil
		}
		return &parseError{p, max}
	}

	add := func(rule pegRule, begin uint32) {
		tree.Add(rule, begin, position, tokenIndex)
		tokenIndex++
		if begin != position && position > max.end {
			max = token32{rule, begin, position}
		}
	}

	matchDot := func() bool {
		if buffer[position] != endSymbol {
			position++
			return true
		}
		return false
	}

	/*matchChar := func(c byte) bool {
		if buffer[position] == c {
			position++
			return true
		}
		return false
	}*/

	/*matchRange := func(lower byte, upper byte) bool {
		if c := buffer[position]; c >= lower && c <= upper {
			position++
			return true
		}
		return false
	}*/

	_rules = [...]func() bool{
		nil,
		/* 0 String <- <(_? Marker? _? NamePart ((ParenthesizedAuthorPart AuthorPart? ParenthesizedYear?) / (AuthorPart? (ParenthesizedYear / Year)?)) (Reference / Tail)? END)> */
		func() bool {
			position0, tokenIndex0 := position, tokenIndex
			{
				position1 := position
				{
					position2, tokenIndex2 := position, tokenIndex
					if !_rules[rule_]() {
						goto l2
					}
					goto l3
				l2:
					position, tokenIndex = position2, tokenIndex2
				}
			l3:
				{
					position4, tokenIndex4 := position, tokenIndex
					if !_rules[ruleMarker]() {
						goto l4
					}
					goto l5
				l4:
					position, tokenIndex = position4, tokenIndex4
				}
			l5:
				{
					position6, tokenIndex6 := position, tokenIndex
					if !_rules[rule_]() {
						goto l6
					}
					goto l7
				l6:
					position, tokenIndex = position6, tokenIndex6
				}
			l7:
				if !_rules[ruleNamePart]() {
					goto l0
				}
				{
					position8, tokenIndex8 := position, tokenIndex
					if !_rules[ruleParenthesizedAuthorPart]() {
						goto l9
					}
					{
						position10, tokenIndex10 := position, tokenIndex
						if !_rules[ruleAuthorPart]() {
							goto l10
						}
						goto l11
					l10:
						position, tokenIndex = position10, tokenIndex10
					}
				l11:
					{
						position12, tokenIndex12 := position, tokenIndex
						if !_rules[ruleParenthesizedYear]() {
							goto l12
						}
						goto l13
					l12:
						position, tokenIndex = position12, tokenIndex12
					}
				l13:
					goto l8
				l9:
					position, tokenIndex = position8, tokenIndex8
					{
						position14, tokenIndex14 := position, tokenIndex
						if !_rules[ruleAuthorPart]() {
							goto l14
						}
						goto l15
					l14:
						position, tokenIndex = position14, tokenIndex14
					}
				l15:
					{
						position16, tokenIndex16 := position, tokenIndex
						{
							position18, tokenIndex18 := position, tokenIndex
							if !_rules[ruleParenthesizedYear]() {
								goto l19
							}
							goto l18
						l19:
							position, tokenIndex = position18, tokenIndex18
							if !_rules[ruleYear]() {
								goto l16
							}
						}
					l18:
						goto l17
					l16:
						position, tokenIndex = position16, tokenIndex16
					}
				l17:
				}
			l8:
				{
					position20, tokenIndex20 := position, tokenIndex
					{
						position22, tokenIndex22 := position, tokenIndex
						if !_rules[ruleReference]() {
							goto l23
						}
						goto l22
					l23:
						position, tokenIndex = position22, tokenIndex22
						if !_rules[ruleTail]() {
							goto l20
						}
					}
				l22:
					goto l21
				l20:
					position, tokenIndex = position20, tokenIndex20
				}
			l21:
				if !_rules[ruleEND]() {
					goto l0
				}
				add(ruleString, position1)
			}
			return true
		l0:
			position, tokenIndex = position0, tokenIndex0
			return false
		},
		/* 1 Marker <- <('×' / '†')> */
		func() bool {
			position24, tokenIndex24 := position, tokenIndex
			{
				position25 := position
				{
					position26, tokenIndex26 := position, tokenIndex
					if buffer[position] != rune('×') {
						goto l27
					}
					position++
					goto l26
				l27:
					position, tokenIndex = position26, tokenIndex26
					if buffer[position] != rune('†') {
						goto l24
					}
					position++
				}
			l26:
				add(ruleMarker, position25)
			}
			return true
		l24:
			position, tokenIndex = position24, tokenIndex24
			return false
		},
		/* 2 NamePart <- <(ItalicInfraspeciesWithAuthors / ItalicInfraspecies / ItalicName / BareName)> */
		func() bool {
			position28, tokenIndex28 := position, tokenIndex
			{
				position29 := position
				{
					position30, tokenIndex30 := position, tokenIndex
					if !_rules[ruleItalicInfraspeciesWithAuthors]() {
						goto l31
					}
					goto l30
				l31:
					position, tokenIndex = position30, tokenIndex30
					if !_rules[ruleItalicInfraspecies]() {
						goto l32
					}
					goto l30
				l32:
					position, tokenIndex = position30, tokenIndex30
					if !_rules[ruleItalicName]() {
						goto l33
					}
					goto l30
				l33:
					position, tokenIndex = position30, tokenIndex30
					if !_rules[ruleBareName]() {
						goto l28
					}
				}
			l30:
				add(ruleNamePart, position29)
			}
			return true
		l28:
			position, tokenIndex = position28, tokenIndex28
			return false
		},
		/* 3 ItalicInfraspeciesWithAuthors <- <('\'' '\'' ItalicContent ('\'' '\'') _ Authors _ InfraRank _ ('\'' '\'') ItalicContent ('\'' '\''))> */
		func() bool {
			position34, tokenIndex34 := position, tokenIndex
			{
				position35 := position
				if buffer[position] != rune('\'') {
					goto l34
				}
				position++
				if buffer[position] != rune('\'') {
					goto l34
				}
				position++
				if !_rules[ruleItalicContent]() {
					goto l34
				}
				if buffer[position] != rune('\'') {
					goto l34
				}
				position++
				if buffer[position] != rune('\'') {
					goto l34
				}
				position++
				if !_rules[rule_]() {
					goto l34
				}
				if !_rules[ruleAuthors]() {
					goto l34
				}
				if !_rules[rule_]() {
					goto l34
				}
				if !_rules[ruleInfraRank]() {
					goto l34
				}
				if !_rules[rule_]() {
					goto l34
				}
				if buffer[position] != rune('\'') {
					goto l34
				}
				position++
				if buffer[position] != rune('\'') {
					goto l34
				}
				position++
				if !_rules[ruleItalicContent]() {
					goto l34
				}
				if buffer[position] != rune('\'') {
					goto l34
				}
				position++
				if buffer[position] != rune('\'') {
					goto l34
				}
				position++
				add(ruleItalicInfraspeciesWithAuthors, position35)
			}
			return true
		l34:
			position, tokenIndex = position34, tokenIndex34
			return false
		},
		/* 4 ItalicInfraspecies <- <('\'' '\'' ItalicContent ('\'' '\'') _ InfraRank _ ('\'' '\'') ItalicContent ('\'' '\''))> */
		func() bool {
			position36, tokenIndex36 := position, tokenIndex
			{
				position37 := position
				if buffer[position] != rune('\'') {
					goto l36
				}
				position++
				if buffer[position] != rune('\'') {
					goto l36
				}
				position++
				if !_rules[ruleItalicContent]() {
					goto l36
				}
				if buffer[position] != rune('\'') {
					goto l36
				}
				position++
				if buffer[position] != rune('\'') {
					goto l36
				}
				position++
				if !_rules[rule_]() {
					goto l36
				}
				if !_rules[ruleInfraRank]() {
					goto l36
				}
				if !_rules[rule_]() {
					goto l36
				}
				if buffer[position] != rune('\'') {
					goto l36
				}
				position++
				if buffer[position] != rune('\'') {
					goto l36
				}
				position++
				if !_rules[ruleItalicContent]() {
					goto l36
				}
				if buffer[position] != rune('\'') {
					goto l36
				}
				position++
				if buffer[position] != rune('\'') {
					goto l36
				}
				position++
				add(ruleItalicInfraspecies, position37)
			}
			return true
		l36:
			position, tokenIndex = position36, tokenIndex36
			return false
		},
		/* 5 InfraRank <- <([a-z]+ '.'?)> */
		func() bool {
			position38, tokenIndex38 := position, tokenIndex
			{
				position39 := position
				if c := buffer[position]; c < rune('a') || c > rune('z') {
					goto l38
				}
				position++
			l40:
				{
					position41, tokenIndex41 := position, tokenIndex
					if c := buffer[position]; c < rune('a') || c > rune('z') {
						goto l41
					}
					position++
					goto l40
				l41:
					position, tokenIndex = position41, tokenIndex41
				}
				{
					position42, tokenIndex42 := position, tokenIndex
					if buffer[position] != rune('.') {
						goto l42
					}
					position++
					goto l43
				l42:
					position, tokenIndex = position42, tokenIndex42
				}
			l43:
				add(ruleInfraRank, position39)
			}
			return true
		l38:
			position, tokenIndex = position38, tokenIndex38
			return false
		},
		/* 6 ItalicName <- <(BoldItalicName / SimpleItalicName)> */
		func() bool {
			position44, tokenIndex44 := position, tokenIndex
			{
				position45 := position
				{
					position46, tokenIndex46 := position, tokenIndex
					if !_rules[ruleBoldItalicName]() {
						goto l47
					}
					goto l46
				l47:
					position, tokenIndex = position46, tokenIndex46
					if !_rules[ruleSimpleItalicName]() {
						goto l44
					}
				}
			l46:
				add(ruleItalicName, position45)
			}
			return true
		l44:
			position, tokenIndex = position44, tokenIndex44
			return false
		},
		/* 7 BoldItalicName <- <('\'' '\'' '\'' (!'\'' .)+ ('\'' '\'' '\''))> */
		func() bool {
			position48, tokenIndex48 := position, tokenIndex
			{
				position49 := position
				if buffer[position] != rune('\'') {
					goto l48
				}
				position++
				if buffer[position] != rune('\'') {
					goto l48
				}
				position++
				if buffer[position] != rune('\'') {
					goto l48
				}
				position++
				{
					position52, tokenIndex52 := position, tokenIndex
					if buffer[position] != rune('\'') {
						goto l52
					}
					position++
					goto l48
				l52:
					position, tokenIndex = position52, tokenIndex52
				}
				if !matchDot() {
					goto l48
				}
			l50:
				{
					position51, tokenIndex51 := position, tokenIndex
					{
						position53, tokenIndex53 := position, tokenIndex
						if buffer[position] != rune('\'') {
							goto l53
						}
						position++
						goto l51
					l53:
						position, tokenIndex = position53, tokenIndex53
					}
					if !matchDot() {
						goto l51
					}
					goto l50
				l51:
					position, tokenIndex = position51, tokenIndex51
				}
				if buffer[position] != rune('\'') {
					goto l48
				}
				position++
				if buffer[position] != rune('\'') {
					goto l48
				}
				position++
				if buffer[position] != rune('\'') {
					goto l48
				}
				position++
				add(ruleBoldItalicName, position49)
			}
			return true
		l48:
			position, tokenIndex = position48, tokenIndex48
			return false
		},
		/* 8 SimpleItalicName <- <('\'' '\'' ItalicContent ('\'' '\''))> */
		func() bool {
			position54, tokenIndex54 := position, tokenIndex
			{
				position55 := position
				if buffer[position] != rune('\'') {
					goto l54
				}
				position++
				if buffer[position] != rune('\'') {
					goto l54
				}
				position++
				if !_rules[ruleItalicContent]() {
					goto l54
				}
				if buffer[position] != rune('\'') {
					goto l54
				}
				position++
				if buffer[position] != rune('\'') {
					goto l54
				}
				position++
				add(ruleSimpleItalicName, position55)
			}
			return true
		l54:
			position, tokenIndex = position54, tokenIndex54
			return false
		},
		/* 9 ItalicContent <- <(!(('\'' '\'') / ('{' '{')) .)*> */
		func() bool {
			{
				position57 := position
			l58:
				{
					position59, tokenIndex59 := position, tokenIndex
					{
						position60, tokenIndex60 := position, tokenIndex
						{
							position61, tokenIndex61 := position, tokenIndex
							if buffer[position] != rune('\'') {
								goto l62
							}
							position++
							if buffer[position] != rune('\'') {
								goto l62
							}
							position++
							goto l61
						l62:
							position, tokenIndex = position61, tokenIndex61
							if buffer[position] != rune('{') {
								goto l60
							}
							position++
							if buffer[position] != rune('{') {
								goto l60
							}
							position++
						}
					l61:
						goto l59
					l60:
						position, tokenIndex = position60, tokenIndex60
					}
					if !matchDot() {
						goto l59
					}
					goto l58
				l59:
					position, tokenIndex = position59, tokenIndex59
				}
				add(ruleItalicContent, position57)
			}
			return true
		},
		/* 10 BareName <- <BareNameContent> */
		func() bool {
			position63, tokenIndex63 := position, tokenIndex
			{
				position64 := position
				if !_rules[ruleBareNameContent]() {
					goto l63
				}
				add(ruleBareName, position64)
			}
			return true
		l63:
			position, tokenIndex = position63, tokenIndex63
			return false
		},
		/* 11 BareNameContent <- <(Uninomial (_ Species (_ Subspecies)?)? &(ParenthesizedAuthorPart / AuthorPart / !.))> */
		func() bool {
			position65, tokenIndex65 := position, tokenIndex
			{
				position66 := position
				if !_rules[ruleUninomial]() {
					goto l65
				}
				{
					position67, tokenIndex67 := position, tokenIndex
					if !_rules[rule_]() {
						goto l67
					}
					if !_rules[ruleSpecies]() {
						goto l67
					}
					{
						position69, tokenIndex69 := position, tokenIndex
						if !_rules[rule_]() {
							goto l69
						}
						if !_rules[ruleSubspecies]() {
							goto l69
						}
						goto l70
					l69:
						position, tokenIndex = position69, tokenIndex69
					}
				l70:
					goto l68
				l67:
					position, tokenIndex = position67, tokenIndex67
				}
			l68:
				{
					position71, tokenIndex71 := position, tokenIndex
					{
						position72, tokenIndex72 := position, tokenIndex
						if !_rules[ruleParenthesizedAuthorPart]() {
							goto l73
						}
						goto l72
					l73:
						position, tokenIndex = position72, tokenIndex72
						if !_rules[ruleAuthorPart]() {
							goto l74
						}
						goto l72
					l74:
						position, tokenIndex = position72, tokenIndex72
						{
							position75, tokenIndex75 := position, tokenIndex
							if !matchDot() {
								goto l75
							}
							goto l65
						l75:
							position, tokenIndex = position75, tokenIndex75
						}
					}
				l72:
					position, tokenIndex = position71, tokenIndex71
				}
				add(ruleBareNameContent, position66)
			}
			return true
		l65:
			position, tokenIndex = position65, tokenIndex65
			return false
		},
		/* 12 Uninomial <- <(NameUpperChar NameLowerChar+)> */
		func() bool {
			position76, tokenIndex76 := position, tokenIndex
			{
				position77 := position
				if !_rules[ruleNameUpperChar]() {
					goto l76
				}
				if !_rules[ruleNameLowerChar]() {
					goto l76
				}
			l78:
				{
					position79, tokenIndex79 := position, tokenIndex
					if !_rules[ruleNameLowerChar]() {
						goto l79
					}
					goto l78
				l79:
					position, tokenIndex = position79, tokenIndex79
				}
				add(ruleUninomial, position77)
			}
			return true
		l76:
			position, tokenIndex = position76, tokenIndex76
			return false
		},
		/* 13 Species <- <NameLowerChar+> */
		func() bool {
			position80, tokenIndex80 := position, tokenIndex
			{
				position81 := position
				if !_rules[ruleNameLowerChar]() {
					goto l80
				}
			l82:
				{
					position83, tokenIndex83 := position, tokenIndex
					if !_rules[ruleNameLowerChar]() {
						goto l83
					}
					goto l82
				l83:
					position, tokenIndex = position83, tokenIndex83
				}
				add(ruleSpecies, position81)
			}
			return true
		l80:
			position, tokenIndex = position80, tokenIndex80
			return false
		},
		/* 14 Subspecies <- <NameLowerChar+> */
		func() bool {
			position84, tokenIndex84 := position, tokenIndex
			{
				position85 := position
				if !_rules[ruleNameLowerChar]() {
					goto l84
				}
			l86:
				{
					position87, tokenIndex87 := position, tokenIndex
					if !_rules[ruleNameLowerChar]() {
						goto l87
					}
					goto l86
				l87:
					position, tokenIndex = position87, tokenIndex87
				}
				add(ruleSubspecies, position85)
			}
			return true
		l84:
			position, tokenIndex = position84, tokenIndex84
			return false
		},
		/* 15 NameUpperChar <- <(UpperChar / UpperCharExtended)> */
		func() bool {
			position88, tokenIndex88 := position, tokenIndex
			{
				position89 := position
				{
					position90, tokenIndex90 := position, tokenIndex
					if !_rules[ruleUpperChar]() {
						goto l91
					}
					goto l90
				l91:
					position, tokenIndex = position90, tokenIndex90
					if !_rules[ruleUpperCharExtended]() {
						goto l88
					}
				}
			l90:
				add(ruleNameUpperChar, position89)
			}
			return true
		l88:
			position, tokenIndex = position88, tokenIndex88
			return false
		},
		/* 16 UpperCharExtended <- <('Æ' / 'Œ' / 'Ö')> */
		func() bool {
			position92, tokenIndex92 := position, tokenIndex
			{
				position93 := position
				{
					position94, tokenIndex94 := position, tokenIndex
					if buffer[position] != rune('Æ') {
						goto l95
					}
					position++
					goto l94
				l95:
					position, tokenIndex = position94, tokenIndex94
					if buffer[position] != rune('Œ') {
						goto l96
					}
					position++
					goto l94
				l96:
					position, tokenIndex = position94, tokenIndex94
					if buffer[position] != rune('Ö') {
						goto l92
					}
					position++
				}
			l94:
				add(ruleUpperCharExtended, position93)
			}
			return true
		l92:
			position, tokenIndex = position92, tokenIndex92
			return false
		},
		/* 17 UpperChar <- <UpperASCII> */
		func() bool {
			position97, tokenIndex97 := position, tokenIndex
			{
				position98 := position
				if !_rules[ruleUpperASCII]() {
					goto l97
				}
				add(ruleUpperChar, position98)
			}
			return true
		l97:
			position, tokenIndex = position97, tokenIndex97
			return false
		},
		/* 18 NameLowerChar <- <(LowerChar / LowerCharExtended / MiscodedChar)> */
		func() bool {
			position99, tokenIndex99 := position, tokenIndex
			{
				position100 := position
				{
					position101, tokenIndex101 := position, tokenIndex
					if !_rules[ruleLowerChar]() {
						goto l102
					}
					goto l101
				l102:
					position, tokenIndex = position101, tokenIndex101
					if !_rules[ruleLowerCharExtended]() {
						goto l103
					}
					goto l101
				l103:
					position, tokenIndex = position101, tokenIndex101
					if !_rules[ruleMiscodedChar]() {
						goto l99
					}
				}
			l101:
				add(ruleNameLowerChar, position100)
			}
			return true
		l99:
			position, tokenIndex = position99, tokenIndex99
			return false
		},
		/* 19 MiscodedChar <- <'�'> */
		func() bool {
			position104, tokenIndex104 := position, tokenIndex
			{
				position105 := position
				if buffer[position] != rune('�') {
					goto l104
				}
				position++
				add(ruleMiscodedChar, position105)
			}
			return true
		l104:
			position, tokenIndex = position104, tokenIndex104
			return false
		},
		/* 20 LowerCharExtended <- <('æ' / 'œ' / 'à' / 'â' / 'å' / 'ã' / 'ä' / 'á' / 'ç' / 'č' / 'é' / 'è' / 'ë' / 'í' / 'ì' / 'ï' / 'ň' / 'ñ' / 'ñ' / 'ó' / 'ò' / 'ô' / 'ø' / 'õ' / 'ö' / 'ú' / 'û' / 'ù' / 'ü' / 'ŕ' / 'ř' / 'ŗ' / 'ſ' / 'š' / 'š' / 'ş' / 'ß' / 'ž')> */
		func() bool {
			position106, tokenIndex106 := position, tokenIndex
			{
				position107 := position
				{
					position108, tokenIndex108 := position, tokenIndex
					if buffer[position] != rune('æ') {
						goto l109
					}
					position++
					goto l108
				l109:
					position, tokenIndex = position108, tokenIndex108
					if buffer[position] != rune('œ') {
						goto l110
					}
					position++
					goto l108
				l110:
					position, tokenIndex = position108, tokenIndex108
					if buffer[position] != rune('à') {
						goto l111
					}
					position++
					goto l108
				l111:
					position, tokenIndex = position108, tokenIndex108
					if buffer[position] != rune('â') {
						goto l112
					}
					position++
					goto l108
				l112:
					position, tokenIndex = position108, tokenIndex108
					if buffer[position] != rune('å') {
						goto l113
					}
					position++
					goto l108
				l113:
					position, tokenIndex = position108, tokenIndex108
					if buffer[position] != rune('ã') {
						goto l114
					}
					position++
					goto l108
				l114:
					position, tokenIndex = position108, tokenIndex108
					if buffer[position] != rune('ä') {
						goto l115
					}
					position++
					goto l108
				l115:
					position, tokenIndex = position108, tokenIndex108
					if buffer[position] != rune('á') {
						goto l116
					}
					position++
					goto l108
				l116:
					position, tokenIndex = position108, tokenIndex108
					if buffer[position] != rune('ç') {
						goto l117
					}
					position++
					goto l108
				l117:
					position, tokenIndex = position108, tokenIndex108
					if buffer[position] != rune('č') {
						goto l118
					}
					position++
					goto l108
				l118:
					position, tokenIndex = position108, tokenIndex108
					if buffer[position] != rune('é') {
						goto l119
					}
					position++
					goto l108
				l119:
					position, tokenIndex = position108, tokenIndex108
					if buffer[position] != rune('è') {
						goto l120
					}
					position++
					goto l108
				l120:
					position, tokenIndex = position108, tokenIndex108
					if buffer[position] != rune('ë') {
						goto l121
					}
					position++
					goto l108
				l121:
					position, tokenIndex = position108, tokenIndex108
					if buffer[position] != rune('í') {
						goto l122
					}
					position++
					goto l108
				l122:
					position, tokenIndex = position108, tokenIndex108
					if buffer[position] != rune('ì') {
						goto l123
					}
					position++
					goto l108
				l123:
					position, tokenIndex = position108, tokenIndex108
					if buffer[position] != rune('ï') {
						goto l124
					}
					position++
					goto l108
				l124:
					position, tokenIndex = position108, tokenIndex108
					if buffer[position] != rune('ň') {
						goto l125
					}
					position++
					goto l108
				l125:
					position, tokenIndex = position108, tokenIndex108
					if buffer[position] != rune('ñ') {
						goto l126
					}
					position++
					goto l108
				l126:
					position, tokenIndex = position108, tokenIndex108
					if buffer[position] != rune('ñ') {
						goto l127
					}
					position++
					goto l108
				l127:
